--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Example brunch application</title>
+  <title>Spam-Scan</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="stylesheets/app.css">
   <script src="javascripts/vendor.js"></script>
@@ -15,7 +15,21 @@
 </head>
 <body>
     <div id="main">
+      <nav>
+        <a href="#">unclassified</a> |
+        <a href="#staff">staff</a> |
+        <a href="#good">good</a> |
+        <a href="#bad">bad</a> |
+        <a href="#spam">spam</a> 
+      </nav>
+      <h1>spam-scan <small id="count"></span></h1>
+      <div id="loading" class="alert alert-info">Loading...</div>
+      <table id="users" class="table table-bordered table-condensed"></table>
     </div>
-
+    <footer>
+      <h3><small>Written by <a href="http://zephod.com">Tom Rees</a> for the <a href="http://okfn.org">Open Knowledge Foundation</a>.</small></h3>
+      <h3><small>Built on <a href="http://activityapi.herokuapp.com">ActivityAPI</a></small></h3>
+      <h3><small>Report issues in the <a href="http://github.com/zephod/spam-scan">GitHub repo</a>.</small><h3>
+    </footer>
 </body>
 </html>
